cmake_minimum_required(VERSION 3.8)
project(original_pub_sub)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(time_pub
  src/time_pub.cpp
)

ament_target_dependencies(time_pub
  rclcpp
  std_msgs
)

install(TARGETS
  time_pub
  DESTINATION lib/${PROJECT_NAME}  
)

add_executable(time_sub
  src/time_sub.cpp
)

ament_target_dependencies(time_sub
  rclcpp
  std_msgs
)

install(TARGETS
  time_sub
  DESTINATION lib/${PROJECT_NAME}  
)

ament_package()
